<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Yellow Star</string>
    <string name="welcomeback">Welcome Back!</string>
    <string name="logintoaccount">Login to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="rememberme">Remember Me</string>
    <string name="forgetpass">Forget Password?</string>
    <string name="donthaveaccount">Don’t have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="login">LOGIN</string>
    <string name="performance">Performance</string>
    <string name="reading">Reading:</string>
    <string name="writing">Writing:</string>
    <string name="listening">Listening:</string>
    <string name="speaking">Speaking:</string>
    <string name="overall">Overall:</string>
    <string name="welcome">Welcome</string>
    <string name="empID">Enter Email ID</string>
    <string name="pass">Enter Password</string>
    <string name="invalid">Enter Valid Email ID</string>
    <string name="invalid_pass">Enter Atleast 4 Digits</string>
    <string name="indiasolar">Yellow Star</string>
    <string name="euser">Enter User</string>
    <string name="Username">Username</string>
    <string name="enteruser">Enter Username</string>
    <string name="permission">Permission Required</string>
    <string name="turnon">Turn on Permissions</string>
    <string name="ok">Ok</string>
    <string name="addlight">Add Light</string>
    <string name="epole">Enter Pole Number</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
    <string name="done">DONE</string>
    <string name="scanningqr">SCANNING QR</string>
    <string name="take_photo">TAKE PHOTO</string>
    <string name="capture">CAPTURE</string>
    <string name="submit">SUBMIT</string>
    <string name="selected_state">State</string>
    <string name="selected_district">District</string>
    <string name="selected_block">Block</string>
    <string name="selected_punchayat">Panchayat</string>
    <string name="selected_ward">Ward</string>
    <string name="selected_device">Device</string>
    <string name="Location_update">Update Location</string>
    <string name="enterscan1">Enter Luminary Serial Number</string>
    <string name="enterscan3">Enter Panel Serial Number</string>
    <string name="enterscan2">Enter Battery Serial Number</string>
    <string name="avail_light">Available Lights</string>
    <string name="save">Save Location</string>
    <string name="instlist">Installation List</string>

    <string name="compass_dial" translatable="false">Compass Dial</string>
    <string name="compass_hands" translatable="false">Compass Hands</string>

    <string name="sotw_north">N</string>
    <string name="sotw_east">E</string>
    <string name="sotw_south">S</string>
    <string name="sotw_west">W</string>
    <string name="sotw_northeast">NE</string>
    <string name="sotw_northwest">NW</string>
    <string name="sotw_southeast">SE</string>
    <string name="sotw_southwest">SW</string>
    <string name="pending_details">Pending Details</string>
    <string name="no_data">No Data</string>
    <string name="enterlocationremark">Enter Location Remark</string>
    <string name="next">NEXT</string>
    <string name="startInstallation">Start Installation</string>
    <string name="no_offline_data_saved">No Offline Installation Pending Data</string>
</resources>