<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <LinearLayout
        android:id="@+id/ln"
        android:background="@color/toolbarcolor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal">
            <FrameLayout
                android:layout_width="@dimen/_40sdp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/backBtn"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:padding="@dimen/_7sdp"
                    android:src="@drawable/back_arrow"
                    app:tint="@color/toolbartext" />
            </FrameLayout>

            <com.yellowstar.helper.CustomTV
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:paddingLeft="@dimen/_18sdp"
                android:text="@string/pending_details"
                android:textColor="@color/toolbartext"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:background="@color/rect_color"/>
    </LinearLayout>


  <LinearLayout
      android:id="@+id/ln"
      android:background="@color/toolbarcolor"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/_40sdp"
          android:orientation="horizontal">

          <FrameLayout
              android:layout_width="@dimen/_40sdp"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:orientation="vertical">
        <ImageView
            android:id="@+id/backBtn"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_35sdp"
            android:padding="@dimen/_7sdp"
            android:src="@drawable/logout"
            app:tint="@color/toolbartext" />
              <com.yellowstar.helper.CustomTV
                  android:visibility="gone"
                  android:layout_marginTop="@dimen/_30sdp"
                  android:layout_marginBottom="@dimen/_10sdp"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:gravity="center"
                  android:textColor="@color/toolbartext"
                  android:textSize="@dimen/_10sdp"
                  android:text="@string/logout"/>
          </FrameLayout>

          <com.yellowstar.helper.CustomTV
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:layout_centerInParent="true"
              android:layout_gravity="center"
              android:gravity="center|left"
              android:paddingLeft="@dimen/_18sdp"
              android:text="Set Site Location"
              android:textColor="@color/toolbartext"
              android:textSize="@dimen/_16sdp"
              android:textStyle="bold" />

          <ImageView
              android:visibility="gone"
              android:id="@+id/pending"
              android:layout_width="@dimen/_36sdp"
              android:layout_height="match_parent"
              android:layout_alignParentRight="true"
              android:paddingRight="@dimen/_12sdp"
              android:src="@drawable/pending_data" />
      </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:background="@color/rect_color"/>
  </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/ln"
        android:background="@drawable/white_back"
        android:padding="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.yellowstar.helper.CustomTVBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:gravity="center|left"
                android:visibility="gone"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:textSize="@dimen/_15sdp"
                android:text="Set Site Location"/>
            <View
                android:visibility="gone"
                android:layout_width="@dimen/_120sdp"
                android:background="@color/grad_background"
                android:layout_height="@dimen/_1sdp"/>
            <LinearLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_35sdp">
            <com.yellowstar.helper.CustomTV
                android:layout_margin="@dimen/_1sdp"
                android:id="@+id/spin_state"
                android:textStyle="bold"
                android:paddingLeft="@dimen/_5sdp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Bihar"
                android:textSize="@dimen/_22sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp" />
        </LinearLayout>
            <com.yellowstar.helper.CustomTVBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:gravity="center|left"
                android:textColor="@color/hintdarkcolor"
                android:textSize="@dimen/_12sdp"
                android:text="@string/selected_district"/>
            <LinearLayout
                android:background="@drawable/rectangle_drop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp">
            <Spinner
                android:layout_margin="@dimen/_1sdp"
                android:id="@+id/spin_dis"
                android:backgroundTint="@color/black"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp" />
        </LinearLayout>
            <com.yellowstar.helper.CustomTVBold
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:gravity="center|left"
                android:textColor="@color/hintdarkcolor"
                android:textSize="@dimen/_12sdp"
                android:text="@string/selected_block"/>
            <LinearLayout
                android:background="@drawable/rectangle_drop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp">
            <Spinner
                android:layout_margin="@dimen/_1sdp"
                android:id="@+id/spin_block"
                android:backgroundTint="@color/black"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp" />
        </LinearLayout>
            <com.yellowstar.helper.CustomTVBold
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:gravity="center|left"
                android:textColor="@color/hintdarkcolor"
                android:textSize="@dimen/_12sdp"
                android:text="@string/selected_punchayat"/>
            <LinearLayout
                android:background="@drawable/rectangle_drop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp">
            <Spinner
                android:layout_margin="@dimen/_1sdp"
                android:id="@+id/spin_punch"
                android:backgroundTint="@color/black"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp" />
        </LinearLayout>
            <com.yellowstar.helper.CustomTVBold
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:gravity="center|left"
                android:textColor="@color/hintdarkcolor"
                android:textSize="@dimen/_12sdp"
                android:text="@string/selected_ward"/>
            <LinearLayout
                android:background="@drawable/rectangle_drop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp">
            <Spinner
                android:layout_margin="@dimen/_1sdp"
                android:id="@+id/spin_war"
                android:backgroundTint="@color/black"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp" />
        </LinearLayout>
            <com.yellowstar.helper.CustomTVBold
                android:visibility="gone"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:gravity="center|left"
                android:textColor="@color/hintdarkcolor"
                android:textSize="@dimen/_12sdp"
                android:text="@string/avail_light"/>
            <LinearLayout
                android:visibility="gone"
                android:background="@drawable/rectangle_drop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp">
            <Spinner
                android:layout_margin="@dimen/_1sdp"
                android:id="@+id/spin_device"
                android:backgroundTint="@color/black"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp" />
        </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <com.yellowstar.helper.CustomTV
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingRight="@dimen/_2sdp"
                android:layout_gravity="center|left"
                android:gravity="center|left"
                android:text="Location: "
                android:textColor="@color/text"
                android:textSize="@dimen/_14sdp" />
            <com.yellowstar.helper.CustomTV
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|left"
                android:gravity="center|left"
                android:text=""
                android:textColor="@color/text"
                android:textSize="@dimen/_14sdp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_alignParentBottom="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:layout_gravity="center"
        android:gravity="center">
        <com.yellowstar.helper.CustomTVBold
            android:id="@+id/AddPoleBtn"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:background="@drawable/button_toolbar"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/next"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />
    </LinearLayout>
    </LinearLayout>
</RelativeLayout>